--- a/investor_simulator/pubspec.yaml
+++ b/investor_simulator/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   auto_size_text: ^3.0.0
   stroke_text: ^0.0.2
+  flutter_svg: ^2.0.10+1
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +67,7 @@ flutter:
     - assets/images/Max.png
     - assets/images/logo.png
     - assets/images/
+    - assets/icons/
 
   fonts:
     - family: MightySouly
