--- a/investor_simulator/android/app/src/main/AndroidManifest.xml
+++ b/investor_simulator/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Add internet access and network state permissions -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
         android:label="investor_simulator"
         android:name="${applicationName}"
