--- a/investor_simulator/pubspec.yaml
+++ b/investor_simulator/pubspec.yaml
@@ -42,6 +42,13 @@ dependencies:
   intl: any
   provider: ^5.0.0
   shared_preferences: ^2.2.2
+  dio: ^5.4.2+1
+  flutter_bloc: ^7.1.0
+  equatable: ^2.0.5
+  syncfusion_flutter_charts: ^25.1.38
+  http: ^1.2.1
+  fl_chart: ^0.67.0
+  chart_sparkline: ^1.0.15+1
 
 dev_dependencies:
   flutter_test:
