--- a/investor_simulator/android/app/src/main/AndroidManifest.xml
+++ b/investor_simulator/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     <!-- Add internet access and network state permissions -->
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
     <application
         android:label="investor_simulator"
         android:name="${applicationName}"
