--- a/investor_simulator/pubspec.yaml
+++ b/investor_simulator/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   http: ^1.2.1
   fl_chart: ^0.67.0
   chart_sparkline: ^1.0.15+1
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   flutter_test:
@@ -78,6 +79,7 @@ flutter:
     - assets/images/logo.png
     - assets/images/
     - assets/icons/
+    - assets/stocks/
 
   fonts:
     - family: MightySouly
