--- a/investor_simulator/pubspec.yaml
+++ b/investor_simulator/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   chart_sparkline: ^1.0.15+1
   url_launcher: ^6.2.6
   tutorial_coach_mark: ^1.2.11
+  flutter_dotenv: ^5.2.1
 
 dev_dependencies:
   flutter_test:
